[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["sh.aydin <sh.aydin@samolet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
black = "^23.12.0"
ruff = "^0.1.8"
vulture = "^2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
